# picsell

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  template.env
ai/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ai/app/: main.py  models.py
ai/app/api/: main.py
ai/app/core/: Gumlet_Guide.docx.txt  bot.py  config.py
backend/: Dockerfile  pyproject.toml
backend/app/: crud.py  main.py  models.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 3c36cf210ba4_campaign_table.py  52e346308949_seed_data.py  5c3e9aaa4f7f_engagement_table.py  883ea54fc7a1_overviewcache_table.py
backend/app/api/: campaign.py  deps.py  main.py  qa.py
backend/app/core/: ai.py  config.py
backend/script/: prestart.sh
chat/: pyproject.toml
chat/app/: models.py
chat/app/api/: main.py
chat/app/core/: bot.py
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  utils.js
frontend/src/assets/: BLINKING.json  index.js
frontend/src/assets/icons/: index.jsx
frontend/src/components/: CopyButton.jsx  Spinner.jsx
frontend/src/components/BubbleChart/: BubbleChart.jsx
frontend/src/components/Button/: Button.jsx
frontend/src/components/Card/: index.jsx
frontend/src/components/CategoryChart/: ClusteredBubbleChart.jsx  constants.js
frontend/src/components/Chip/: index.jsx
frontend/src/components/CopyButton/: index.jsx
frontend/src/components/EngagementChart/: LineChart.jsx
frontend/src/components/Modal/: index.jsx
frontend/src/components/Table/: index.jsx
frontend/src/components/fields/: FieldWrapper.jsx  FileUploaderField.jsx  InputField.jsx  TextField.jsx
frontend/src/components/guageChart/: GaugeChart.jsx  constants.js  utils.js
frontend/src/components/scoreChart/: GaugeChart.jsx  constants.js  easeInOutAnimation.js  utils.js
frontend/src/container/: chatPage.jsx  dashboard.jsx  demo.jsx  details.jsx  login.jsx
frontend/src/container/Details/: AiSuggestionsCard.jsx  DetailsHeader.jsx  DetailsPage.jsx  PerformaceSection.jsx  PerformanceSummary.jsx  ShareModal.jsx  VideoCard.jsx  consts.js
frontend/src/container/Overview/: CreateProjectModal.jsx  consts.jsx  index.jsx
frontend/src/container/Overview/components/: CampaignTypeField.jsx  CampaignsTable.jsx  CreateCampaignModal.jsx  OverviewCards.jsx
frontend/src/layout/: DashboardLayout.jsx  privateRoutes.jsx  publicRoutes.jsx
